sandbox/submissions/yash/error.txt
  File "User_Data/yash/codePy.py", line 40
    /*your code goes here*/
    ^
SyntaxError: invalid syntax
